--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
   deploy-to-ec2:
     runs-on: ubuntu-latest
     needs: build-and-deploy  # Wait until build job is done
+    environment: staging
 
     steps:
       - name: 🔐 Set up SSH agent
