--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,3 +88,4 @@ jobs:
           echo "🚀 Starting services using Docker Compose"
           docker-compose pull
           docker-compose up -d --remove-orphans --build
+          EOF
