--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,17 +50,21 @@ jobs:
           ssh -o StrictHostKeyChecking=no "$EC2_HOST" <<EOF
           set -e
           
-          echo "🐳 Ensuring Docker is running"
-          sudo dnf -y update
-          sudo dnf -y install docker docker-compose-plugin
+          echo "🐳 Install & start Docker (AL2023)"
+          sudo dnf -y install docker || true
           sudo systemctl enable --now docker
+      
+          
           sudo usermod -aG docker ec2-user || true
-
-          echo "📦 Installing docker-compose if missing"
-          if ! command -v docker-compose &> /dev/null; then
-            sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-\$(uname -s)-\$(uname -m)" -o /usr/local/bin/docker-compose
-            sudo chmod +x /usr/local/bin/docker-compose
-          fi
+      
+          echo "🧩 Install Docker Compose v2 plugin"
+          COMPOSE_VERSION="${COMPOSE_VERSION:-v2.29.7}"
+          sudo mkdir -p /usr/local/lib/docker/cli-plugins
+          sudo curl -sSL \
+          "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-linux-$(uname -m)" \
+          -o /usr/local/lib/docker/cli-plugins/docker-compose
+          sudo chmod +x /usr/local/lib/docker/cli-plugins/docker-compose
+          sudo docker compose version
 
           echo "🔐 Logging in to Docker Hub"
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
