--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,13 +72,19 @@ jobs:
             echo 'Docker Compose already installed'
           fi
 
-          echo '🔐 Logging in to Docker Hub'
+          echo '🔐 Setting up Docker permissions and login'
+          # Ensure docker group membership is active and fix permissions
+          sudo chown ec2-user:docker /var/run/docker.sock 2>/dev/null || true
+          mkdir -p ~/.docker
+          chmod 700 ~/.docker
+          
+          # Use newgrp to activate docker group membership for this session
+          newgrp docker <<DOCKERCMD
           echo '$DOCKER_PASSWORD' | docker login -u '$DOCKER_USERNAME' --password-stdin
 
           echo '🧾 Creating configuration files'
           cat > .env <<EOT
           ENV=\$ENV
-          REDIS_URL=\$REDIS_URL
           RDS_CONNECTION=$RDS_CONNECTION
           EOT
           
@@ -101,4 +107,5 @@ jobs:
           
           echo '✅ Deployment completed'
           docker-compose ps
+          DOCKERCMD
           "
